@@ -1,0 +1,5 @@
+.gitattributes export-ignore
+.travis.yml export-ignore
+Tests/ export-ignore
+Build/ export-ignore
+.ddev/ export-ignore
