@@ -1,0 +1,6 @@
+sys_file_storage,,,,,,,,,,
+,"uid","pid","name","driver","configuration","is_browsable","is_public","is_writable","is_online",
+,1,0,svconnector,Local,<![CDATA[<?xml version="1.0" encoding="utf-8" standalone="yes" ?><T3FlexForms><data><sheet index="sDEF"><language index="lDEF"><field index="basePath"><value index="vDEF">typo3conf/ext/svconnector/Tests/Functional/Utility/Fixtures/Files/</value></field><field index="pathType"><value index="vDEF">relative</value></field><field index="caseSensitive"><value index="vDEF">1</value></field></data></T3FlexForms></T3FlexForms>]]>,1,1,1,1,
+sys_file,,,,,,,,,,,,
+,"uid","pid","storage","identifier","identifier_hash","folder_hash","extension","mime_type","name","sha1","size",
+,1,0,1,/test.csv,87eb4f0dfc733af584a3788adf7b25960783c531,42099b4af021e53fd8fd4e056c2568d7c2e3ffa8,csv,text/plain,test.csv,2976cf04e61488258a40c55ff15719e8225e8013,26,
