@@ -1,45 +1,0 @@
-<?xml version="1.0" encoding="utf-8"?>
-<dataset>
-	<sys_file_storage>
-		<uid>1</uid>
-		<pid>0</pid>
-		<name>svconnector</name>
-		<driver>Local</driver>
-		<configuration><![CDATA[<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
-		<T3FlexForms>
-		    <data>
-		        <sheet index="sDEF">
-		            <language index="lDEF">
-		                <field index="basePath">
-		                    <value index="vDEF">typo3conf/ext/svconnector/Tests/Functional/Utility/Fixtures/Files/</value>
-		                </field>
-		                <field index="pathType">
-		                    <value index="vDEF">relative</value>
-		                </field>
-		                <field index="caseSensitive">
-		                    <value index="vDEF">1</value>
-		                </field>
-		            </language>
-		        </sheet>
-		    </data>
-		</T3FlexForms>
-</T3FlexForms>]]></configuration>
-		<is_browsable>1</is_browsable>
-		<is_public>1</is_public>
-		<is_writable>1</is_writable>
-		<is_online>1</is_online>
-	</sys_file_storage>
-	<sys_file>
-		<uid>1</uid>
-		<pid>0</pid>
-		<storage>1</storage>
-		<identifier>/test.csv</identifier>
-		<identifier_hash>87eb4f0dfc733af584a3788adf7b25960783c531</identifier_hash>
-		<folder_hash>42099b4af021e53fd8fd4e056c2568d7c2e3ffa8</folder_hash>
-		<extension>csv</extension>
-		<mime_type>text/plain</mime_type>
-		<name>test.csv</name>
-		<sha1>2976cf04e61488258a40c55ff15719e8225e8013</sha1>
-		<size>26</size>
-	</sys_file>
-</dataset>
