@@ -1,6 +1,7 @@
 2024-06-16 Francois Suter (Idéative)  <typo3@ideative.ch>
 
     * Clean up code with Rector, drop compatibility with PHP 7.4 and 8.0, references #28
+    * Move tests to typo3/testing-framework (functional tests not working)
 
 2024-05-10 Francois Suter (Idéative)  <typo3@ideative.ch>
 
